@@ -1,0 +1,104 @@
+@prefix doap: 	<http://usefulinc.com/ns/doap#> .
+@prefix foaf: 	<http://xmlns.com/foaf/0.1/> .
+@prefix lv2: 	<http://lv2plug.in/ns/lv2core#> .
+@prefix rdf: 	<http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix rdfs: 	<http://www.w3.org/2000/01/rdf-schema#> .
+@prefix ll: 	<http://ll-plugins.nongnu.org/lv2/namespace#> .
+@prefix guiext: <http://lv2plug.in/ns/extensions/ui#> .
+@prefix atom: 	<http://lv2plug.in/ns/ext/atom#> .
+@prefix urid: 	<http://lv2plug.in/ns/ext/urid#> .
+@prefix time: 	<http://lv2plug.in/ns/ext/time#> .
+@prefix pprops: <http://lv2plug.in/ns/ext/port-props#> .
+@prefix guiext: <http://lv2plug.in/ns/extensions/ui#> .
+
+<http://avwlv2.sourceforge.net/plugins/avw/beatslicer_mono/gui>
+  a guiext:GtkUI ;
+  guiext:binary <beatslicer_mono_gui.so> .
+
+<http://avwlv2.sourceforge.net/plugins/avw/beatslicer_mono>
+	a lv2:Plugin ;
+	lv2:project <http://avwlv2.sourceforge.net/plugins/avw/> ;        
+	doap:name "Beat Slicer - Mono" ;
+	doap:license <http://opensource.org/licenses/isc> ;
+	ll:pegName "p" ;
+	guiext:ui <http://avwlv2.sourceforge.net/plugins/avw/beatslicer_mono/gui> ;
+	lv2:optionalFeature lv2:hardRTCapable ;
+	lv2:port  [
+		a lv2:InputPort, lv2:AudioPort ;
+		lv2:index 0 ;
+		lv2:symbol "input" ;
+		lv2:name "Input" ;
+	] , [
+		a lv2:InputPort, lv2:CVPort ;
+		lv2:index 1 ;
+		lv2:symbol "gate" ;
+		lv2:name "Gate" ;
+		lv2:default 0.0 ;
+		lv2:minimum 0.0 ;
+        lv2:maximum 1.0 ;
+	] ,	[
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 2 ;
+		lv2:symbol "tempo" ;
+		lv2:name "Tempo" ;
+		lv2:default 120.0 ;
+		lv2:minimum 40.0 ;
+		lv2:maximum 320.0 ;
+	] ,	[
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 3 ;
+		lv2:symbol "sliceSize" ;
+		lv2:name "Slice Size" ;
+		lv2:default 0.125 ;
+		lv2:minimum 0.03125 ;
+		lv2:maximum 0.5 ;
+	] ,	[
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 4 ;
+		lv2:symbol "sampleSize" ;
+		lv2:name "Sample Size (nb beats)" ;
+		lv2:default 4 ;
+		lv2:minimum 2 ;
+		lv2:maximum 16 ;
+	] ,	[
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 5 ;
+		lv2:symbol "attack" ;
+		lv2:name "Attack (ms)" ;
+		lv2:default 7.0 ;
+		lv2:minimum 3.0 ;
+		lv2:maximum 25.0 ;
+	] ,	[
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 6 ;
+		lv2:symbol "release" ;
+		lv2:name "Release (ms)" ;
+		lv2:default 7.0 ;
+		lv2:minimum 3.0 ;
+		lv2:maximum 25.0 ;
+	] , [
+		a lv2:InputPort, lv2:ControlPort ;
+		lv2:index 7 ;
+		lv2:symbol "reverseMode" ;
+		lv2:name "Reverse Mode" ;
+		lv2:default 0 ;
+		lv2:minimum 0 ;
+		lv2:maximum 2 ;
+		lv2:portProperty lv2:enumeration ;
+		lv2:scalePoint  
+				[
+			    rdfs:label "Disabled" ;
+			    rdf:value 0
+		] ,		[
+				rdfs:label "Random Reverse" ;
+				rdf:value 1
+		] ,		[
+		  		rdfs:label "Reverse" ;
+				rdf:value 2
+		] ;
+	] ,	[
+		a lv2:OutputPort, lv2:AudioPort ;
+		lv2:index 8 ;
+		lv2:symbol "output" ;
+		lv2:name "Output" ;
+	] .
