@@ -1,5 +1,5 @@
-#ifndef avw_lv__beatrepeater_mono_peg
-#define avw_lv__beatrepeater_mono_peg
+#ifndef src_beatslicer_mono_peg
+#define src_beatslicer_mono_peg
 
 
 #ifndef PEG_STRUCT
@@ -14,18 +14,19 @@ typedef struct {
 } peg_data_t;
 #endif
 
-/* <http://avwlv2.sourceforge.net/plugins/avw/beatrepeater_mono> */
+/* <http://avwlv2.sourceforge.net/plugins/avw/beatslicer_mono> */
 
-static const char p_uri[] = "http://avwlv2.sourceforge.net/plugins/avw/beatrepeater_mono";
+static const char p_uri[] = "http://avwlv2.sourceforge.net/plugins/avw/beatslicer_mono";
 
 enum p_port_enum {
   p_input,
   p_gate,
   p_tempo,
-  p_beatSize,
+  p_sliceSize,
+  p_sampleSize,
   p_attack,
   p_release,
-  p_reverse,
+  p_reverseMode,
   p_output,
   p_n_ports
 };
@@ -34,12 +35,13 @@ static const peg_data_t p_ports[] = {
   { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
   { 0, 1, 0, 0, 0, 0 }, 
   { 40, 320, 120, 0, 0, 0 }, 
-  { 0.03125, 32, 1, 0, 0, 0 }, 
+  { 0.03125, 0.5, 0.125, 0, 0, 0 }, 
+  { 2, 16, 4, 0, 0, 0 }, 
   { 3, 25, 7, 0, 0, 0 }, 
   { 3, 25, 7, 0, 0, 0 }, 
-  { 0, 1, 0, 0, 0, 0 }, 
+  { 0, 2, 0, 0, 0, 0 }, 
   { -3.40282e+38, 3.40282e+38, -3.40282e+38, 0, 0, 0 }, 
 };
 
 
-#endif /* avw_lv__beatrepeater_mono_peg */
+#endif /* src_beatslicer_mono_peg */
